--- a/css/index.css
+++ b/css/index.css
@@ -47,4 +47,83 @@ table.list tr.bg{background:#ddd;}
 .menu-btn-bandit{margin-left: 5%;margin-top: 1rem;}
 .menu-bandit-left{padding-left: 0.85rem;}
 .targer-text{text-align: center}
-.targer-text span,.targer-text span{color: #f7f7f8;font-size: 0.76rem;  }
+.targer-text span,.targer-text span{color: #f7f7f8;font-size: 0.76rem; }
+
+/****真人视讯***/
+.video-bg{width: 100%; height: auto; }
+.video-bg img{width: 100%;}
+.table-bordered{text-align: center;border: 1px solid #a8abb0;width: 100%;color: #3d4145;background: white;    margin-bottom: 1rem}
+.table-bordered tr,.table-bordered td,.table-bordered th{border: solid 1px #a8abb0}
+.table-bordered td{font-size: 0.63rem;padding: 0.14rem;}
+.table-bordered th{font-size: 0.72rem;padding: 0.14rem;background: #d0d0d0;font-weight: normal}
+.bonus-line{width: 60%;height:3px;text-align: center;margin-left: 3.5rem;}
+.bonus-line img{width: 10rem;}
+.bonus-line-title{font-size: 0.68rem;color: white;text-align: center;margin-top: -0.4rem;}
+.bonus-line-text{font-size: 0.68rem;color: white;text-align: left;}
+.bonus-line-text p{margin: 0px;line-height: 1.12rem;font-size: 0.68rem ;font-weight:300}
+.page,.page-group-form{box-sizing:border-box;position:absolute;left:0;top:0;width:100%;height:100%;background:url(../image/login_bg.png) repeat;}
+
+/**login**/
+.form-group{margin-top:1rem }
+.form-input-group{width:100%;padding-left:.6rem;margin-bottom:.5rem;box-sizing:border-box;-webkit-box-sizing:border-box;background-color:#fff}
+.form-input-box{line-height:2.76rem;height:2.76rem;overflow:hidden;padding-left:1.75rem;position:relative}
+.form-input-icon{position:absolute;width:1rem;height:1rem;background-position:0 0;background-repeat:no-repeat;background-size:1rem 1rem;left:0;top:.6rem}
+.form-input-iconphone{background-image:url(../image/wap2-icon7-1.png)}
+.form-input-iconlock{background-image:url(../image/wap2-icon7-2.png)}
+.form-input-param{background-image:url(../image/wap2-icon7-3.png)}
+.form-input-name{background-image:url(../image/wap2-icon7-4.png)}
+.form-input-mail{background-image:url(../image/wap2-icon7-5.png)}
+.form-btn-wrap{margin-left:.75rem;margin-right:.75rem;overflow:hidden}
+.mb8px{margin-bottom:0.4rem;margin-top: 4.68rem}
+.mb2px{margin-top:0.86rem}
+.mb3px{margin-top:1.26rem}
+a.form-btn,input.form-btn{border:1px solid #10807f;height:2.25rem;width:100%;box-sizing:border-box;font-size:.8rem;text-align:center;line-height:2.25rem;display:block;border-radius:.2rem;background-color:#10807f;color:#fff}
+.form-btn-wrap{margin-left:.75rem;margin-right:.75rem;overflow:hidden}
+a.form-btn-blue,input.wap2-btn-blue{background-color:#60b7fc;border-color:#60b7fc}
+a.form-btn-red,input.form-btn-red{background-color:#f00b0d;border-color:#f00b0d}
+.f12{font-size:.6rem!important}
+.fr{float:right}
+.fl{float:left}
+.v4-management {
+    position: relative;
+    display: block;
+    height: 2.647rem;
+    background: #fff;
+    line-height: 2.347rem;
+    color: #10807f;
+    font-size: 0.783rem;
+    padding: 0 0.64rem;
+    /*margin-top: 0.427rem;*/
+    border-bottom: 1px solid #d0d0d0;
+}
+.v4-management:after {
+    position: absolute;
+    content: "";
+    width: 0.341rem;
+    height: 0.341rem;
+    top: 0.939rem;
+    right: 0.64rem;
+    color: #10807f;
+    border: 1px solid #D8D8D8;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    border-width: 0 1px 1px 0;
+}
+.user_cash,.report_cash{text-align: center}
+.v4-management-report{
+    position: relative;
+    display: block;
+    height: 2.647rem;
+    background: #fff;
+    line-height: 2.347rem;
+    color: #10807f;
+    font-size: 0.783rem;
+    padding: 0 0.64rem;
+}
+
+
+
+
+
+
+
