--- a/css/index.css
+++ b/css/index.css
@@ -79,50 +79,32 @@ table.list tr.bg{background:#ddd;}
 .mb3px{margin-top:1.26rem}
 a.form-btn,input.form-btn{border:1px solid #10807f;height:2.25rem;width:100%;box-sizing:border-box;font-size:.8rem;text-align:center;line-height:2.25rem;display:block;border-radius:.2rem;background-color:#10807f;color:#fff}
 .form-btn-wrap{margin-left:.75rem;margin-right:.75rem;overflow:hidden}
-a.form-btn-blue,input.wap2-btn-blue{background-color:#60b7fc;border-color:#60b7fc}
-a.form-btn-red,input.form-btn-red{background-color:#f00b0d;border-color:#f00b0d}
 .f12{font-size:.6rem!important}
 .fr{float:right}
 .fl{float:left}
-.v4-management {
-    position: relative;
-    display: block;
-    height: 2.647rem;
-    background: #fff;
-    line-height: 2.347rem;
-    color: #10807f;
-    font-size: 0.783rem;
-    padding: 0 0.64rem;
-    /*margin-top: 0.427rem;*/
-    border-bottom: 1px solid #d0d0d0;
-}
-.v4-management:after {
-    position: absolute;
-    content: "";
-    width: 0.341rem;
-    height: 0.341rem;
-    top: 0.939rem;
-    right: 0.64rem;
-    color: #10807f;
-    border: 1px solid #D8D8D8;
-    transform: rotate(-45deg);
-    -webkit-transform: rotate(-45deg);
-    border-width: 0 1px 1px 0;
-}
-.user_cash,.report_cash{text-align: center}
-.v4-management-report{
-    position: relative;
-    display: block;
-    height: 2.647rem;
-    background: #fff;
-    line-height: 2.347rem;
-    color: #10807f;
-    font-size: 0.783rem;
-    padding: 0 0.64rem;
-}
-
-
-
+.v4-management{position:relative;display:block;height:2.647rem;background:#fff;line-height:2.347rem;color:#10807f;font-size:0.783rem;padding:0 0.64rem;border-bottom:1px solid#d0d0d0;}
+.v4-management:after{position:absolute;content:"";width:0.341rem;height:0.341rem;top:0.939rem;right:0.64rem;color:#10807f;border:1px solid#D8D8D8;transform:rotate(-45deg);-webkit-transform:rotate(-45deg);border-width:0 1px 1px 0;}
+.user_cash,.report_cash{text-align:center}
+.v4-management-report{position:relative;display:block;height:2.647rem;background:#fff;line-height:2.347rem;color:#10807f;font-size:0.783rem;padding:0 0.64rem;}
+.form-input-group2{width:100%;padding-left:.6rem;box-sizing:border-box;-webkit-box-sizing:border-box;background-color:#fff;border-bottom:1px solid#d0d0d0}
+.form-input-title{position:absolute;height:auto;font-size0.6rem;background-position:0 0;background-repeat:no-repeat;background-size:1rem 1rem;left:0;line-height:2.76rem;}
+.form-input-box2{line-height:2.76rem;height:2.76rem;overflow:hidden;padding-left:5.75rem;position:relative;}
+.form-btn-wrap2{margin-left:.75rem;margin-right:.75rem;overflow:hidden}
+a.form-btn2,input.form-btn2{border:1px solid#10807f;height:2.25rem;width:45%;box-sizing:border-box;font-size:.8rem;text-align:center;line-height:2.25rem;display:block;border-radius:.2rem;background-color:#10807f;color:#fff}
+a.form-btn-blue,input.wap2-btn-blue{background-color:#60b7fc;border-color:#60b7fc}
+a.form-btn-red,input.wap2-btn-red{background-color:#f00b0d;border-color:#f00b0d}
+.table-bordered-rep{text-align:center;width:100%;color:#3d4145;margin-bottom:1rem;}
+.table-bordered-rep thead{background-color:#aed8d8;}
+.table-bordered-rep thead th{background-color:#aed8d8;font-size:0.78rem;line-height:1.65rem;font-weight:400;}
+.table-bordered-rep td{font-size:0.72rem;line-height:2.45rem;font-weight:400;border-bottom:1px solid#d0d0d0;min-width:3rem}
+.table-tran{font-size: 0.68rem;}
+.tfl{text-align: left;padding-left: 0.6rem;}
+.tfr{text-align: right;padding-right: 0.6rem}
+.form-input-box2 select{min-width: 6rem;}
+.mt-number-animate{ font-family: '微软雅黑'; line-height:1rem; height: 1rem;/*设置数字显示高度*/; font-size: 1.12rem;/*设置数字大小*/ overflow: hidden; display: inline-block; position: relative; }
+.mt-number-animate .mt-number-animate-dot{ width: 0.4rem;/*设置分割符宽度*/ line-height: 1rem; float: left; text-align: center;}
+.mt-number-animate .mt-number-animate-dom{ width: 0.7rem;/*设置单个数字宽度*/ text-align: center; float: left; position: relative; top: 0;}
+.mt-number-animate .mt-number-animate-dom .mt-number-animate-span{ width: 100%; float: left;}
 
 
 
